--- a/logstash.conf
+++ b/logstash.conf
@@ -1,14 +1,18 @@
 input {
+    log4j {
+        mode => "server"
+        port => 5001
+    }
     beats {
-        port => 5044
+        port => 5002
         type => beats
     }
 
     tcp {
-        port => 5000
+        port => 5003
         type => syslog
     }
-
+    
 }
 
 filter {
